# offlinedocs

./: README.md  docker-compose.yml  main.py  pyproject.toml  test.json
offlinedocs/: main.py
offlinedocs/scraper/Crawler/: crawler.py
offlinedocs/scraper/Fetcher/: fetcher.py
offlinedocs/scraper/Parser/: parser.py
src/offlinedocs/core/: config.py  databases.py
src/offlinedocs/scraper/: fetcher.py
