[project]
name = "offlinedocs"
version = "0.1.0"
description = "A self-hosted, offline documentation engine."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",  # ASGI Server
    "typer[all]>=0.9.0",          # CLI Framework
    "rich>=13.7.0",               # Terminal UI Rendering
    "sqlalchemy[asyncio]>=2.0.25", # ORM
    "asyncpg>=0.29.0",            # High-perf Postgres driver
    "pydantic-settings>=2.1.0",   # Config management
    "alembic>=1.13.1",            # DB Migrations
    "selectolax>=0.3.16",         # Ultra-fast HTML parser (Faster than BeautifulSoup)
    "httpx>=0.26.0",              # Async HTTP client
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"